--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body{
 }
 
 .navbar{
-  /*height: 114px;*/
   background-color: #7DDFE8;
   width: 100%;
   height: 114px;
@@ -28,36 +27,24 @@ body{
 }
 
 .logo-box{
-  /*display: flex;*/
-  /*flex-flow: row nowrap;*/
-  /*justify-content: center;*/
   margin: 0;
   position: absolute;
-  /*height: 20.08vh;*/
   height: 114px;
   width: 102px;
-  /*width: 31.88vw;*/
   background-color: #f5005B;
 }
 
 .logo{
   flex: 1 1 auto;
-  /*flex: 1 1 30%;*/
   position: absolute;
   background-color: #F5005B;
   background-position: top;
   height: 92px;
   width: 82px;
-  /*height: 16.2vh;
-  width: 25.63vw;*/
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 14px;
   margin-left: 8px;
-  /*margin-top: 1.75vh;
-  margin-right: 3.13vw;
-  margin-bottom: 2.46vh;
-  margin-left: 2.5vw;*/
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url('../images/filmclub.png');
@@ -76,7 +63,6 @@ ul{
 li{
   background-color: #00A5BF;
   height: 38px;
-  /*height: 6.69vh;*/
   width: 100%;
   text-align: center;
   margin: 0;
@@ -89,17 +75,11 @@ li{
 li>a{
   color: #FFF;
   text-decoration: none;
-  /*line-height: 38px;*/
-  /*text-align: center;*/
-  /*padding-left: 25.63vw;*/
   padding-left: 102px;
-
 }
 
-.lower-pg li>a{
+footer li>a{
   padding-left: 0;
-  /*width: 100vw;*/
-  /*margin: 0;*/
 }
 
 ul:first-child, ul:nth-child(3){
@@ -134,8 +114,6 @@ section{
   height: 35px;
   width: 100%;
   line-height: 35px;
-  /*padding-top: 10px;*/
-  /*padding-bottom: 10px;*/
   padding-left: 10px;
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
@@ -392,8 +370,20 @@ footer>p{
     height: 28px;
     line-height: 38px;
   }
-  .lower-pg ul{
+  footer>ul{
     padding-left: 0;
+  }
+
+  footer{
+
+    text-align: center;
+    height: 114px;
+  }
+
+  footer>p{
+      margin: 0;
+      font-size: 18px;
+      line-height: 114px;
   }
 
 }
